Delete more than one tournament at one request
