# docs/swagger.json
@@ -224,7 +224,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateOrEditTournament"
+                            "$ref": "#/definitions/models.CreateEditTournament"
                         }
                     }
                 ],
@@ -237,6 +237,51 @@
                     },
                     "400": {
                         "description": "Error during tournament creation",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.MessageResponseType"
+                        }
+                    }
+                }
+            }
+        },
+        "/tournament/delete": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete tournaments for current user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tournament"
+                ],
+                "summary": "Delete tournaments",
+                "parameters": [
+                    {
+                        "description": "Data to delete tournaments",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TournamentIds"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Tournaments deleted",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.MessageResponseType"
+                        }
+                    },
+                    "400": {
+                        "description": "Error during tournaments deletion",
                         "schema": {
                             "$ref": "#/definitions/controllers.MessageResponseType"
                         }
@@ -303,7 +348,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateOrEditTournament"
+                            "$ref": "#/definitions/models.CreateEditTournament"
                         }
                     }
                 ],
@@ -402,7 +447,7 @@
                 }
             }
         },
-        "/user": {
+        "/user/tournaments": {
             "get": {
                 "security": [
                     {
@@ -417,7 +462,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tournament"
+                    "user"
                 ],
                 "summary": "Create new tournament",
                 "responses": {
@@ -475,7 +520,7 @@
                 }
             }
         },
-        "models.CreateOrEditTournament": {
+        "models.CreateEditTournament": {
             "type": "object",
             "required": [
                 "name",
@@ -573,6 +618,20 @@
                 },
                 "userID": {
                     "type": "string"
+                }
+            }
+        },
+        "models.TournamentIds": {
+            "type": "object",
+            "required": [
+                "tournamentIds"
+            ],
+            "properties": {
+                "tournamentIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
